# grow-simplee-rider-admin-dashboard

./: .gitignore  README.md  TODO.md  call_model.py  modelamazon.py  new.csv  package-lock.json  package.json  pyproject.toml
backend/: .env.example  .gitignore  init.sql  pyproject.toml
backend/backend/: geocodes.csv  main.py  osrm.sh  simulate.py
backend/backend/algo/: afternoon_run.py  deliveries.csv  morning_run.py  pickups.csv
backend/backend/db/: dummy.sql  init.sql  queries.sql
backend/backend/geo_jsons/: 10_geo.json  12_geo.json  14_geo.json  1_geo.json  2_geo.json  3_geo.json  4_geo.json  5_geo.json  6_geo.json  7_geo.json  8_geo.json  9_geo.json  geo_example.json
backend/backend/jsons/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
backend/backend/models/: models.py
backend/backend/route_planner/: load.py
backend/db/: init.sql  queries.sql
route-planner/: .gitignore  README.md  ToDo.md  distance_matrix.py  docker-compose.yml  pyproject.toml  qa.md  run_docker.sh
route-planner/data/: bangalore_dispatch_address_finals.xlsx  bangalore_pickups.xlsx  distance_matrix.txt  drop_points.txt  drop_points_place_ids.txt
route-planner/data_karnataka/: Unconfirmed 679856.crdownload
route-planner/geocode/: deliveries.csv  deliveries_0.csv  distance_matrix.py  final.csv  final.sql  geocode.py  make_distance_matrix.py  vis.py
route-planner/notebooks/: Clustering_GrowSimplee.ipynb  ORTools_DBSCAN.ipynb
route-planner/osrm_shortest/: bash.sh  example_geo.json  result.json
route-planner/samples/: bangalore_dispatch_address_finals.xlsx  bangalore_pickups.xlsx
route-planner/src/: README.md  afternoon_run.py  convert_to_nparr_and_dump.py  geopy_generator.py  job_handler.py  morning_run.py  sample_big_data_generator.py  sample_data_handler.py  test.py  vroom
route-planner/src/input/: README.md  (+8 more)
(+87 files in other folders)
