[tool.poetry]
name = "grow-simplee-rider-admin-dashboard"
version = "0.1.0"
description = ""
authors = ["Sumanth NR <sumanthnr62@gmail.com>"]
readme = "README.md"
packages = [{include = "grow_simplee_rider_admin_dashboard"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
