[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Yet Another Backend"
authors = ["Rachit Keerti Das"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^^2.9"
fastapi = "^0.89.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
