[tool.poetry]
name = "route-planner"
version = "0.1.0"
description = ""
authors = ["Aayush2492 <aayushpatel2402@gmail.com>"]
readme = "README.md"
packages = [{include = "route_planner"}]

[tool.poetry.dependencies]
python = "^3.10"
ortools = "^9.5.2237"
requests = "^2.28.2"
python-dotenv = "^0.21.0"
geopy = "^2.3.0"
xlrd = "^2.0.1"
pandas = "^1.5.3"
openpyxl = "^3.1.0"
geocoder = "^1.38.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
